# gnatcoll-core

./: .als.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .travis-install.sh  .travis.yml  CONTRIBUTING.md  Makefile  Makefile.conf.in  Makefile.gnat  Makefile.gnatcoll_gtk  Makefile.gnatlib_gtk  README  README.md  aclocal.m4  alire.toml  appveyor.yml  configure  configure.in  configure_minimal  features  features-1.3  features-1.7  features-13  features-14  features-15  features-16  features-17  features-170  features-18  features-19  gnat_debug.adc  gnatcoll-roadmap.txt  gnatcoll.gpr  gnatcoll_build.gpr  gnatcoll_core.gpr  gnatcoll_full.gpr  gnatcoll_gnat.gpr  gnatcoll_gps.gpr  (+24 more)
.github/workflows/: main.yaml
core/: gnatcoll_core.gpr  gnatcoll_core.gpr.py
core/config/: gnatcoll_core_constants.gpr
core/src/: gnatcoll-arg_lists.adb  gnatcoll-buffer.adb  gnatcoll-buffer.ads  gnatcoll-directed_graph.adb  gnatcoll-directed_graph.ads  gnatcoll-email-parser.adb  gnatcoll-email-utils.adb  gnatcoll-email.adb  gnatcoll-email.ads  gnatcoll-file_indexes.adb  gnatcoll-file_indexes.ads  gnatcoll-file_paths.ads  gnatcoll-formatters.ads  gnatcoll-geometry.adb  gnatcoll-geometry.ads  gnatcoll-io-native.adb  gnatcoll-io-remote-windows.adb  gnatcoll-io-remote.adb  gnatcoll-io.ads  gnatcoll-json.adb  gnatcoll-json.ads  gnatcoll-mmap-system__unix.adb  gnatcoll-mmap-system__unix.ads  gnatcoll-mmap-system__win32.adb  gnatcoll-mmap-system__win32.ads  gnatcoll-opt_parse-misc_parsers.adb  gnatcoll-opt_parse-misc_parsers.ads  gnatcoll-opt_parse.adb  gnatcoll-opt_parse.ads  gnatcoll-path.ads  gnatcoll-plugins__unix.adb  gnatcoll-pools.adb  gnatcoll-random.ads  gnatcoll-string_builders.adb  gnatcoll-string_builders.ads  gnatcoll-string_list_builders.ads  gnatcoll-strings_impl.adb  gnatcoll-strings_impl.ads  gnatcoll-traces.adb  gnatcoll-traces.ads  (+9 more)
distrib/: gen_gps.py  gnatcoll.gpr.in  gnatcoll.gpr__copy.in  gnatcoll.gpr__gnat_util.in  gnatcoll_gmp.gpr.in  gnatcoll_gps.xml  gnatcoll_gtk.gpr  gnatcoll_iconv.gpr  gnatcoll_postgres.gpr  gnatcoll_python.gpr.in  gnatcoll_readline.gpr  gnatcoll_runtime.xml  gnatcoll_sqlite.gpr  gnatlib_gps.xml  gnatlib_gtk.gpr  gnatlib_python.gpr.in
distrib/gnatcoll/: __init__.py  runtime.py
distrib/relocatable/: gnatcoll.gpr.in  gnatlib.gpr.in
distrib/static/: gnatcoll.gpr.in  gnatlib.gpr.in
docs/: Makefile  Makefile.in  building.rst  classes.xmi  conf.py  config.rst  filling.rst  generate_reference_guides  geometry.rst  gnatcoll.css  gnatcoll.texi  gnatcoll_include.texi.in  gnatlib.css  gnatlib.texi  iconv.rst  index.rst  intro.rst  json.rst  memory.rst  mmap.rst  pools.rst  projects.rst  promises.rst  ravenscar.rst  readline.rst  ref_index.rst  refcount.rst  scripting.rst  sql.rst  storage_pools.rst  terminals.rst  traces.rst  user_index.rst  vfs.rst  xref.rst
docs/core/: gnatcoll-config.rst  gnatcoll-email.rst  gnatcoll-json.rst  gnatcoll-os.rst  gnatcoll-scripts.rst  gnatcoll-strings.rst  gnatcoll-templates.rst  gnatcoll-traces.rst  index.rst
docs/minimal/: gnatcoll-boyer_moore.rst  gnatcoll-memory.rst  gnatcoll-refcount.rst  gnatcoll-tribooleans.rst  index.rst
docs/projects/: index.rst
examples/: Makefile  base64-demo  base64_coder.adb  common.adb  common.ads  common_gtk.adb  common_gtk.ads  examples.gpr  examplesgtk.gpr  gtkconsole.adb  gtkconsole.ads  newclass.adb  newclassgtk.adb  tb64.adb  textconsole.adb  textconsole.ads
examples/coders/: base64_coder.adb  base64_coder.gpr
examples/gmp/: gmp_examples.gpr  isprime.adb  square_triangular_numbers.adb
examples/projects/: gpr_sources.adb  gpr_sources.gpr
gprproject/: __init__.py  gprbuild.py  os.py
gprproject/testsuite/: __init__.py
minimal/: gnatcoll_minimal.gpr  gnatcoll_minimal.gpr.py
minimal/config/: gnatcoll_minimal_constants.gpr
minimal/src/: getRSS.c  gnatcoll-any_types.adb  gnatcoll-asserts.adb  gnatcoll-asserts.ads  gnatcoll-atomic.adb  gnatcoll-damerau_levenshtein_distance.ads  gnatcoll-locks.adb  gnatcoll-refcount.adb  gnatcoll-refcount.ads  gnatcoll-storage_pools.ads  gnatcoll_atomics.c  gnatcoll_support.c
projects/: gnatcoll_projects.gpr  gnatcoll_projects.gpr.py
projects/config/: gnatcoll_projects_constants.gpr
projects/src/: gnatcoll-projects.adb  gnatcoll-projects.ads  gnatcoll-scripts-files.adb
scripts/: Makefile  gnatlib_scripts.gpr  gnatlib_scripts_gtk.gpr
scripts/examples/: common.adb  common.ads  common_gtk.adb  examples.gpr  examplesgtk.gpr  gtkconsole.adb  gtkconsole.ads  textconsole.adb  textconsole.ads
scripts/src/: gnat-scripts-impl.adb  gnat-scripts-shell.adb  gnat-scripts-shell.ads  gnat-scripts-utils.adb  gnat-scripts-utils.ads  gnat-scripts.adb  gnat-scripts.ads
scripts/src_gtk/: gnat-scripts-gtkada.adb
scripts/testsuite/: testapi.adb  testapi.out  testconsole.adb  testsuite.adb  testsuite.gpr  testsuite_export.adb  testsuite_export.ads
src/: Makefile  Makefile.gmp  Makefile.gnatcoll  Makefile.gnatlib  Makefile.gtk  Makefile.iconv  Makefile.postgres  Makefile.python  Makefile.readline  Makefile.sqlite  Makefile.tools  dborm.py  dbschema.txt  executable_path.c  getRSS.c  gnat-boyer_moore.adb  gnat-boyer_moore.ads  gnat-email-mailboxes.adb  gnat-email-mailboxes.ads  gnat-email-parser.adb  gnat-email-parser.ads  gnat-email-utils.adb  gnat-email-utils.ads  gnat-email.adb  gnat-email.ads  gnat-mmap.adb  gnat-mmap.ads  gnat-mmap__unix.adb  gnat-mmap__win32.adb  gnat-ravenscar-multiple_queue_cyclic_server.adb  gnat-ravenscar-multiple_queue_cyclic_server.ads  gnat-ravenscar-multiple_queue_sporadic_server.adb  gnat-ravenscar-multiple_queue_sporadic_server.ads  gnat-ravenscar-simple_cyclic_task.adb  gnat-ravenscar-simple_cyclic_task.ads  gnat-ravenscar-simple_sporadic_task.adb  gnat-ravenscar-simple_sporadic_task.ads  gnat-ravenscar-sporadic_server.adb  gnat-ravenscar-sporadic_server.ads  gnat-ravenscar-sporadic_server_with_callback.adb  (+263 more)
src/gmp/: gmp_support.c  gnatcoll-gmp-integers.adb  (+18 more)
testsuite/: README.md  e3-test.yaml  run-tests
wip_entities/: .gitignore  .gnatdebug  Makefile  TODO.org  dbschema.txt  entities.gpr  initialdata.txt
(+1075 files in other folders)
